# nyoom.nvim

./: .fenneldoc  .gitattributes  .gitignore  .luarc.json  Cargo.toml  LICENSE  Makefile  README.md  aniseed-install.sh  flake.nix  hotpot-install.sh  init.fnl  init.lua  install.sh  lockfile.lua  shell.nix  test  test.c
.github/: CHANGELOG.md  README.md
colors/: carbon.lua
doc/: nyoom.norg
docs/: contributing.md  examples.md  faq.md  getting_started.md  modules.md
docs/norg/: contributing.norg  examples.norg  faq.norg  getting_started.norg  modules.norg
fnl/: au.fnl  config.fnl  ft.fnl  init.fnl  macros.fnl  maps.fnl  modules.fnl  pack.fnl  packages.fnl  pacttesting.fnl
fnl/carbon/: build.fnl  carbon.fnl
fnl/conf/: config.fnl  init.fnl  macros.fnl  maps.fnl  pack.fnl  packages.fnl  statusline.fnl
fnl/core/: autoload.fnl  commands.fnl  defs.fnl  doctor.fnl  events.fnl  highlights.fnl  init.fnl  keybinds.fnl  keymaps.fnl  maps.fnl  optimise-builtins.fnl  options.fnl  patch.fnl  profile.fnl  repl.fnl  shared.fnl  statusline.fnl  sync.fnl  table.fnl
fnl/lang/: rust.fnl
fnl/macros/: command-macros.fnl  compile-time-macros.fnl  crypt-macros.fnl  event-macros.fnl  highlight-macros.fnl  keybind-macros.fnl  option-macros.fnl  package-macros.fnl  seq-macros.fnl  string-macros.fnl  types-macros.fnl  variable-macros.fnl
fnl/modules/: README.md  README.norg
lua/: config.lua  lazytimer.lua  mappings.lua  md5.lua  options.lua  packerInit.lua  packer_compiled.lua  pluginList.lua  tangerine_vimrc.lua
plugin/: 0-tangerine.lua  packer_compiled.lua
src/: lib.rs
(+373 files in other folders)
